--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,21 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <title>Sophie Bluel - Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+    <meta name="description" content="">
+    <link rel="stylesheet" href="./assets/style.css">
+    
 </head>
 <body>
-    <form action="#" method="post" id="formLogin">
-        <label for="email">E-mail</label>
-        <input type="email" name="email" id="email">
-        <label for="password">Mot de passe</label>
-        <input type="password" name="password" id="password">
+<header>
+    <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+    <nav>
+        <ul>
+            <li>projets</li>
+            <li>contact</li>
+            <li> <a href="./login.html"> login</a></li>
+            <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <div class="form-login">
+        <h2>Log in</h2>
+        <form action="#" method="post" id="loginForm">
+            <label for="email">E-mail</label>
+            <input type="email" name="email" id="email">
+            <label for="password">Mot de passe</label>
+            <input type="password" name="password" id="password">
+        
+            <input type="submit" value="Se connecter">
+            <a class="mdp-oublie" href="#">Mot de passe oublié</a> <br>
+        </form>
+    </div>
+</main>
 
-        <input type="submit" value="Se connecter">
-        <a href="">Mot de passe oublié</a>
-    </form>
-
-    <script src="./login.js"></script>
+<footer>
+    <nav>
+        <ul>
+            <li>Mentions Légales</li>
+        </ul>
+    </nav>
+</footer>
+<script src="./login.js" defer></script>
 </body>
 </html>
