test login error

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -13,38 +13,37 @@
 </head>
 <body>
 <header>
-    <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-    <nav>
-        <ul>
-            <li>projets</li>
-            <li>contact</li>
-            <li> <a href="./login.html"> login</a></li>
-            <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-        </ul>
-    </nav>
+	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+	<nav>
+		<ul>
+			<li> <a href="./index.html"> projets </a></li>
+			<li>contact</li>
+			<li> <a href="./login.html"> login</a></li>
+			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+		</ul>
+	</nav>
 </header>
 <main>
-    <div class="form-login">
-        <h2>Log in</h2>
-        <form action="#" method="post" id="loginForm">
-            <label for="email">E-mail</label>
-            <input type="email" name="email" id="email">
-            <label for="password">Mot de passe</label>
-            <input type="password" name="password" id="password">
-        
-            <input type="submit" value="Se connecter">
-            <a class="mdp-oublie" href="#">Mot de passe oublié</a> <br>
-        </form>
-    </div>
+	<section id="loginSection">
+		<h2>Log in</h2>
+		<form action="#" method="post" id="loginForm">
+			<label for="email">Email</label>
+			<input type="email" name="email" id="email">
+			<label for="password">Mot de passe</label>
+			<input type="password" name="password" id="password">
+			<input type="submit" value="Se connecter">
+            <a class="mdp-oublie" href="#">Mot de passe oublié</a>
+		</form>
+	</section>
 </main>
 
 <footer>
-    <nav>
-        <ul>
-            <li>Mentions Légales</li>
-        </ul>
-    </nav>
+	<nav>
+		<ul>
+			<li>Mentions Légales</li>
+		</ul>
+	</nav>
 </footer>
-<script src="./login.js" defer></script>
+<script src="./login.js"></script>
 </body>
 </html>
