--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,11 +7,15 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/cca2fd5ffb.js" crossorigin="anonymous"></script>
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+
+	<script src="./script.js" defer></script>
 	
 </head>
 <body>
+
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
@@ -36,7 +40,8 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<h2>Mes Projets
+		</h2>
 		<div class="gallery">
 
 		</div>
@@ -63,6 +68,6 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./script.js"></script>
+
 </body>
 </html>
