--- a/FrontEnd/test.html
+++ b/FrontEnd/test.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Grid pour les images</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./test.css">
     <script src="https://kit.fontawesome.com/cca2fd5ffb.js" crossorigin="anonymous"></script>
 </head>
@@ -11,50 +14,36 @@
 
     <div id="simpleModal" class="modal">
         <div class="modal-content">
-            <span class="closeBtn">x</span>
-            <br>
-            <h3 class="titreGallery">Galerie photo</h3>
-            <div class="galleryModal">
-                    <div class="containerPoubelle">
-                        <img src="http://localhost:5678/images/abajour-tahina1651286843956.png" alt="">
-                        <div class="iconPoubelle"><i class="fa-solid fa-trash-can fa-xs"></i></div>
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/appartement-paris-v1651287270508.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/restaurant-sushisen-londres1651287319271.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/la-balisiere1651287350102.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/structures-thermopolis1651287380258.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/appartement-paris-x1651287435459.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/le-coteau-cassis1651287469876.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/villa-ferneze1651287511604.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/appartement-paris-xviii1651287541053.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/bar-lullaby-paris1651287567130.png" alt="">
-                    </div>
-                    <div>
-                        <img src="http://localhost:5678/images/hotel-first-arte-new-delhi1651287605585.png" alt="">
-                    </div>
-                </div>
-
-                <hr>
-                <button class="btnAddImg" type="submit">Ajouter une photo</button>
+            <div class="returnClose">
+                <span class="returnBtn"><i class="fa-solid fa-arrow-left fa-sm"></i></span>
+                <span class="closeBtn"><i class="fa-solid fa-xmark fa-sm"></i></span>
             </div>
-        </div>
+            <br>
+            <h3 class="titreModal">Ajout photo</h3>
+            <div class="AddImgModal">
+                <div>
+                    <i class="fa-regular fa-image imgIcon"></i>
+                </div>
+                    <div><button class="addPhoto">+ Ajouter photo</button></div>
+                    <div class="infoPhoto">jpg, png : 4mo max</div>
+            </div>
+            <div class="formAjoutPhoto">
+                <form action="#" method="post">
+                    <label for="titre">Titre</label>
+                    <input type="text" name="titre" id="titre">
+
+                    <label for="category">Catégorie</label>
+                    <select type="category" name="category" id="category">
+                        <option value="" disabled selected hidden></option>
+                        <option value="categorie 1">1</option>
+                        <option value="categorie 2">2</option>
+                    </select>
+
+                    <hr class="hrAddPhoto">
+                    <input type="submit" value="Valider">
+                </form>
+            </div>
+
     </div>
 
 
