--- a/FrontEnd/test.html
+++ b/FrontEnd/test.html
@@ -39,13 +39,14 @@
                         <option value="categorie 2">2</option>
                     </select>
 
+                    <option value=""></option>
+
                     <hr class="hrAddPhoto">
                     <input type="submit" value="Valider">
                 </form>
             </div>
-
+        </div>
     </div>
-
 
 </body>
 </html>
