test CSS ok - manque photo

--- a/FrontEnd/test.html
+++ b/FrontEnd/test.html
@@ -107,11 +107,7 @@
 
             <hr class="hrAddPhoto" />
 
-            <input
-              id="envoyerBtn"
-              class="validerInput"
-              type="submit"
-              value="Valider"
+            <input id="envoyerBtn" class="validerInput" type="submit" value="Valider"
             />
           </form>
         </div>
