add works working

--- a/FrontEnd/test.html
+++ b/FrontEnd/test.html
@@ -18,8 +18,12 @@
     <script src="test.js" defer></script>
   </head>
   <body>
+
+    <!-- Créé dans openModal() -->
     <div id="modal" class="modal">
       <div class="modal-content">
+    <!-- Créé dans openModal() -->
+
         <div class="modalHeader">
           <span class="returnBtn"
             ><i class="fa-solid fa-arrow-left fa-xl"></i
