Add work working + error messages added

--- a/FrontEnd/test.html
+++ b/FrontEnd/test.html
@@ -39,9 +39,7 @@
               <label for="fileUpload" class="fileUploadLabel">
                 <i class="fa-regular fa-image fa-4x uploadImgIcon"></i>
               </label>
-              <button type="button" id="fileUploadButton" class="fileUploadBtn">
-                + Ajouter photo
-              </button>
+              <input type="button" id="fileUploadButton" class="fileUploadBtn" value="+ Ajouter photo" required/>
               <input
                 type="file"
                 accept=".jpg, .jpeg, .png"
