--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
     <meta name="description" content="">
     <link rel="stylesheet" href="./assets/style.css">
+	<script src="./login2.js" defer></script>
     
 </head>
 <body>
@@ -29,22 +30,22 @@
 		<h2>Log in</h2>
 		<form action="#" method="post" id="loginForm">
 			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
+			<input type="email" name="email" id="email" required>
 			<label for="password">Mot de passe</label>
-			<input type="password" name="password" id="password">
+			<input type="password" name="password" id="password" required>
 			<input type="submit" value="Se connecter">
             <a class="mdp-oublie" href="#">Mot de passe oublié</a>
 		</form>
 	</section>
 </main>
 
-<footer>
+<footer class="footerLogin">
 	<nav>
 		<ul>
 			<li>Mentions Légales</li>
 		</ul>
 	</nav>
 </footer>
-<script src="./login.js"></script>
+
 </body>
 </html>
