--- a/FrontEnd/test.html
+++ b/FrontEnd/test.html
@@ -1,76 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Grid pour les images</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./test.css" />
-    <script
-      src="https://kit.fontawesome.com/cca2fd5ffb.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="test.js" defer></script>
-  </head>
-  <body>
+<html lang="fr">
+<head>
+	<meta charset="UTF-8">
+	<title>Sophie Bluel - Architecte d'intérieur</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/cca2fd5ffb.js" crossorigin="anonymous"></script>
+	<meta name="description" content="">
+	<link rel="stylesheet" href="./assets/style.css">
 
-    <!-- Créé dans openModal() -->
-    <div id="modal" class="modal">
-      <div class="modal-content">
-    <!-- Créé dans openModal() -->
+	<script src="./script2.js" defer></script>
+	
+</head>
+<body>
 
-        <div class="modalHeader">
-          <span class="returnBtn"
-            ><i class="fa-solid fa-arrow-left fa-xl"></i
-          ></span>
-          <span class="closeBtn"><i class="fa-solid fa-xmark fa-xl"></i></span>
-        </div>
+<header>
+	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+	<nav>
+		<ul>
+			<li>projets</li>
+			<li>contact</li>
+			<li><a href="./login.html"> login</a></li>
+			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+		</ul>
+	</nav>
+</header>
+<main>
+	<section id="introduction">
+		<figure>
+			<img src="./assets/images/sophie-bluel.png" alt="">
+		</figure>
+		<article>
+			<h2>Designer d'espace</h2>
+			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
+			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
+		</article>
+	</section>
+	<section id="portfolio">
+		<h2>Mes Projets
+		</h2>
+		<div class="gallery">
 
-        <h3 class="modalTitle">Ajout photo</h3>
+		</div>
+	</section>
+	<section id="contact">
+		<h2>Contact</h2>
+		<p>Vous avez un projet ? Discutons-en !</p>
+		<form action="#" method="post">
+			<label for="name">Nom</label>
+			<input type="text" name="name" id="name">
+			<label for="email">Email</label>
+			<input type="email" name="email" id="email">
+			<label for="message">Message</label>
+			<textarea name="message" id="message" cols="30" rows="10"></textarea>
+			<input type="submit" value="Envoyer">
+		</form>
+	</section>
+</main>
 
-        <div class="imgUploadForm">
-          <form method="post">
-            <fieldset id="photoFieldset" class="uploadPhotoForm">
-              <label for="fileUpload" class="fileUploadLabel">
-                <i class="fa-regular fa-image fa-4x uploadImgIcon"></i>
-              </label>
-              <input type="button" id="fileUploadButton" class="fileUploadBtn" value="+ Ajouter photo" required/>
-              <input
-                type="file"
-                accept=".jpg, .jpeg, .png"
-                id="fileUpload"
-                name="image"
-              />
-              <div class="infoPhoto">jpg, png : 4mo max</div>
-            </fieldset>
-            <span id="displayPreviewContainer"></span>
+<footer>
+	<nav>
+		<ul>
+			<li>Mentions Légales</li>
+		</ul>
+	</nav>
+</footer>
 
-            <fieldset class="inputFields">
-              <label for="titre">Titre</label>
-              <input type="text" name="title" id="titleWork" />
-
-              <label for="category">Catégorie</label>
-              <div>
-                <select type="category" name="category" id="category">
-                  <option value="" disabled selected hidden></option>
-                  <option value="1">Objets</option>
-                  <option value="2">Hôtels</option>
-                </select>
-              </div>
-            </fieldset>
-
-            <hr class="hrAddPhoto" />
-
-            <input id="envoyerBtn" class="validerInput" type="submit" value="Valider"
-            />
-          </form>
-        </div>
-      </div>
-    </div>
-  </body>
+</body>
 </html>
