--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 
-	<script src="./test.js" defer></script>
+	<script src="./script.js" defer></script>
 	
 </head>
 <body>
